--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nahidcse/sage",
+    "name": "nahidcse25/sage",
     "description": "This is a MVC based project",
     "type": "project",
     "license": "MIT",
